tests/NormalTests/paczka2/big_fuzzy/73957116.err
Error in line 12: 9AljcF A381 75,9
Error in line 16: 9AljcF A386 30,3
Error in line 20: BJvzTTGzA A386 30,8
Error in line 22: 9AljcF S872 60,4
Error in line 7: IXOfHpDKCgh A381 184,7
Error in line 25: 9AljcF A386 37,8
Error in line 27: 9AljcF S872 21,3
Error in line 31: IXOfHpDKCgh A386 -2,6
Error in line 26: IXOfHpDKCgh A386 34,0
Error in line 49: A386 A386 76,7
Error in line 61: 1uSC6fBzES S872 62,8
Error in line 57: A386 A381 25,7
Error in line 70: KXwVwe A386 99,9
Error in line 67: A386 S872 4,8
Error in line 78: A386 S994 73,6
Error in line 77: 9AljcF S994 32,6
Error in line 92: BJvzTTGzA S994 15,2
Error in line 93: BJvzTTGzA A381 72,1
Error in line 98: BJvzTTGzA A386 0,3
Error in line 95: 1uSC6fBzES S994 67,3
Error in line 105: A386 S994 54,0
Error in line 116: A386 S994 74,3
Error in line 85: IXOfHpDKCgh A386 171,3
Error in line 129: 1uSC6fBzES A381 18,7
Error in line 140: A386 A381 68,1
Error in line 148: IXOfHpDKCgh S994 34,02
Error in line 141: A386 A386 67,8
Error in line 149: A386 S994 64,9
Error in line 144: 1uSC6fBzES A386 87,9
Error in line 158: KXwVwe S994 147,7
Error in line 161: 1uSC6fBzES A381 75,6
Error in line 152: A386 A381 37,0
Error in line 166: A386 A386 34,8
Error in line 176: 1uSC6fBzES A386 9,1
Error in line 177: IXOfHpDKCgh A386 15,1
Error in line 183: IXOfHpDKCgh S994 81,2
Error in line 184: BJvzTTGzA S872 85,3
Error in line 201: KXwVwe A381 43,6
Error in line 195: BJvzTTGzA A381 40,3
Error in line 218: A386 A386 13,8
Error in line 204: KXwVwe A386 62,2
Error in line 222: IXOfHpDKCgh S872 95,7
Error in line 228: 1uSC6fBzES S994 1,3
Error in line 211: BJvzTTGzA S872 2,6
Error in line 232: 1uSC6fBzES A381 5,2
Error in line 229: IXOfHpDKCgh A381 7,2
Error in line 244: rcMg8sr5D9 S994 -1,0
Error in line 246: BJvzTTGzA S872 30,2
Error in line 239: IXOfHpDKCgh S872 26,8
